// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Insights Example renders the Application Insights and checks snapshot 1`] = `
"{
  "output": {
    "app_id": {
      "value": "\${azurerm_application_insights.testappi_appinsights_8B7486B2.app_id}"
    },
    "connection_string": {
      "sensitive": true,
      "value": "\${azurerm_application_insights.testappi_appinsights_8B7486B2.connection_string}"
    },
    "id": {
      "value": "\${azurerm_application_insights.testappi_appinsights_8B7486B2.id}"
    },
    "instrumentation_key": {
      "sensitive": true,
      "value": "\${azurerm_application_insights.testappi_appinsights_8B7486B2.instrumentation_key}"
    },
    "name": {
      "value": "\${azurerm_application_insights.testappi_appinsights_8B7486B2.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_application_insights": {
      "testappi_appinsights_8B7486B2": {
        "application_type": "web",
        "location": "eastus",
        "name": "appinsight-test",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "workspace_id": "\${azurerm_log_analytics_workspace.log_analytics.id}"
      }
    },
    "azurerm_log_analytics_workspace": {
      "log_analytics": {
        "location": "eastus",
        "name": "la-test",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-test"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;

exports[`Application Insights With Defaults renders an Application Insights with defaults and checks snapshot 1`] = `
"{
  "output": {
    "app_id": {
      "value": "\${azurerm_application_insights.testAzureApplicationInsightsDefaults_appinsights_1184F8FC.app_id}"
    },
    "connection_string": {
      "sensitive": true,
      "value": "\${azurerm_application_insights.testAzureApplicationInsightsDefaults_appinsights_1184F8FC.connection_string}"
    },
    "id": {
      "value": "\${azurerm_application_insights.testAzureApplicationInsightsDefaults_appinsights_1184F8FC.id}"
    },
    "instrumentation_key": {
      "sensitive": true,
      "value": "\${azurerm_application_insights.testAzureApplicationInsightsDefaults_appinsights_1184F8FC.instrumentation_key}"
    },
    "name": {
      "value": "\${azurerm_application_insights.testAzureApplicationInsightsDefaults_appinsights_1184F8FC.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_application_insights": {
      "testAzureApplicationInsightsDefaults_appinsights_1184F8FC": {
        "application_type": "web",
        "location": "eastus",
        "name": "appi-test",
        "resource_group_name": "rg-test"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;
